Update package and documentation naming

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ServerAge
 version: ${project.version}
 description: ${project.description}
-main: com.shockzeh.serverage.ServerAgePlugin
-author: Shockzeh
+main: co.uk.jaycarr.serverage.ServerAgePlugin
+author: AsyncJay
 softdepend: [PlaceholderAPI, MVdWPlaceholderAPI]
